k8s/mlflow/mlflow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  labels:
    app: mlflow
spec:
  replicas: 1
  template:
    metadata:
      name: mlflow
      labels:
        app: mlflow
    spec:
      containers:
        - name: mlflow
          image: gcr.io/stobias-dev/mlflow:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          command:
            - mlflow
            - server
            - -h
            - 0.0.0.0
            - --backend-store-uri
            - file:///data
            - --serve-artifacts
            - --artifacts-destination
            - s3://mlflow-s3-bucket
          volumeMounts:
          - mountPath: /data
            name: mlfllow-vol2
      restartPolicy: Always
      volumes:
      - name: mlfllow-vol2
        persistentVolumeClaim:
          claimName: mlfllow-vol2
  selector:
    matchLabels:
      app: mlflow
